--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+:root {
+    /* ### Primary */
+
+--Softorange: hsl(35, 77%, 62%);
+--Softred: hsl(5, 85%, 63%);
+
+/* ### Neutral */
+
+--Off-white: hsl(36, 100%, 99%);
+--Grayishblue: hsl(233, 8%, 79%);
+--Darkgrayishblue: hsl(236, 13%, 42%);
+--Verydarkblue: hsl(240, 100%, 5%);
+}
 *, 
 *:after,
 *:before {
@@ -7,53 +20,86 @@
     text-decoration: none;
 }
 header {
-    padding: 2.5rem 8rem;
+    padding: 2.5rem 12rem;
+}
+main{
+    position: relative;
 }
 body{
     font-size: 100%;
     list-style-type: none;
     padding: 2.5rem 2rem ;
 }
-.container {
-    width: 250rem;
-    padding: 0 8rem;
-    margin-left: 1.3rem;
+#first-img {
+width: 62rem;
+height:23rem ;
+padding-bottom: 0;
+
 }
-.col-4 {
-    background-color: rgb(199, 199, 24);
+#news {
+    width: 30rem;
+    height: 38.4rem;
+    margin-bottom: 1.5rem;
+    background-color: var(--Verydarkblue);
+    padding: 1.5rem;
+    color: white;
 }
-.col-8 {
-    background-color: rgb(164, 164, 247);
+#news p {
+    color:white;
 }
-.col-md-4 {
-    background-color: violet;
+#news h2{
+    color: var(--Softorange);
+    font-weight: bold;
 }
-.grid1 {
-    height: 19rem;
-    width: 80rem;
-    background-image: url(/assets/images/image-web-3-desktop.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+#news .p-title {
+    font-weight: bold;
+    font-size: 1.15rem;
 }
-main {
+button {
+    margin-top: 2.2rem;
     width: 10rem;
+    letter-spacing: 0.2rem;
+    font-weight: bold;
+    font-size: 0.5rem;
+    background-color: var(--Darkgrayishblue);
 }
-.grid2 {
-   position:absolute;
-   left: 81.5rem;
-   width: 27rem;
-   height: 32.5rem;
+#read-more-box {
+    margin-left:20px;
+    width: 20rem;
+    position: absolute;
+    top: 24.5rem;
+    height: 10.45rem;
+    background-color: white;
+    
 }
-.mgn1 {
-    padding-top: 1rem;
-    width: 92rem;
-    height: 13rem;
+h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
 }
-.grid3{
-    width: 61.5rem;
+#hold-main {
+    width: 116rem;
+    padding: 0rem 14rem;
+
 }
-.grid4 {
-    padding-top: 1rem;
-    width: 96rem;
-    height: 10rem;
-    }
+#hold-readmore {
+    padding: 0rem 13.5rem;
+    width: 20rem;
+}
+#hold-readmore h1 {
+
+    font-size: 4rem;
+}
+
+#hold-readmore2 {
+    position: absolute;
+    width: 21rem;
+    top: 25.7rem;
+    left: 45rem;
+
+}
+#hold-readmore2 p {
+    font-size: 1rem;
+}
+.attribution {
+    margin-top: 6 rem;
+}
