--- a/style.css
+++ b/style.css
@@ -117,20 +117,36 @@ h1 {
 .attribution {
     margin-top: 6rem;
 }
-.smaller-images {
-    width: 8rem;
-    height: 10rem;
-   margin-right: 1.6rem;
+.hold-sml-imgs {
+    margin-right: 0;
+    padding-right: 0;
+    margin-top: 3.5rem;
+    margin-right: 6.3rem;
+   
+ 
 }
+footer .hold-sml-imgs:first-of-type {
+    margin-left: 13.8rem;
+}
+.smaller-images {
+    width: 10rem;
+    height: 11.8rem;
+   margin-right: 1.4rem;
+}
+
 .hold-sml-imgs p:first-of-type {
+
     margin-top: 0rem;
     padding-top: 0rem;
-    font-size: 2.4rem;
+    font-size: 2.8rem;
     font-weight: bold;
     color: var(--Grayishblue);
     margin-bottom: 0.3rem;
 }
 .hold-sml-imgs h3 {
-    font-size:  1.3rem;
+    font-size:  1.5rem;
     font-weight: bold;
+}
+.hold-subtext {
+    width: 14rem;
 }
